# OAI-FlexRIC-custom-xApp

./: .gitignore
flexric/examples/emulator/agent/: sm_gtp.c
flexric/src/sm/: CMakeLists.txt
flexric/src/sm/agent_if/ans/: sm_ag_if_ans.h
flexric/src/sm/agent_if/read/: sm_ag_if_rd.c  sm_ag_if_rd.h
flexric/src/sm/agent_if/write/: sm_ag_if_wr.h
flexric/src/sm/array_sm/: CMakeLists.txt  array_sm_agent.c  array_sm_agent.h  array_sm_id.h  array_sm_msg.c  array_sm_msg.h  array_sm_ric.c  array_sm_ric.h
flexric/src/xApp/: CMakeLists.txt
flexric/src/xApp/swig/: CMakeLists.txt  swig_wrapper.cpp  swig_wrapper.h
